--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,8 @@
 streamlit==1.26.0
-pandas==2.0.3
-numpy==1.25.2
-pillow==9.5.0
-rich==13.3.4
-markdown-it-py==3.0.0
-mdurl==0.1.2
-pygments==2.19.2
-folium==0.14.0
-geopy==2.3.0
-python-dotenv==1.1.1
+pandas>=2.1.1
+numpy>=1.26.0
+pillow>=9.6.0
+rich>=14.2.0
+folium>=0.14.0
+geopy>=2.3.0
+python-dotenv>=1.1.1
